--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,5 +1,5 @@
 
 body, html {
-  font-family: 'Noto Sans JP';
+  font-family: 'ProximaSoft-Regular', 'Noto Sans JP', -apple-system, BlinkMacSystemFont, "Helvetica Neue", YuGothic, "ヒラギノ角ゴ ProN W3", Hiragino Kaku Gothic ProN, Arial, "メイリオ", Meiryo, sans-serif;
   margin: 0;
 }
