--- a/src/scss/_webfont.scss
+++ b/src/scss/_webfont.scss
@@ -1,2 +1,9 @@
 
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
+@font-face {
+  font-family: "ProximaSoft-Regular";
+  src: url("../webfonts/ProximaSoft-Regular.eot");
+  src: url("../webfonts/ProximaSoft-Regular.eot?#iefix") format("embedded-opentype"),
+  url("../webfonts/ProximaSoft-Regular.woff2") format("woff2"),
+  url("../webfonts/ProximaSoft-Regular.woff") format("woff"),
+  url("../webfonts/ProximaSoft-Regular.ttf") format("truetype");
+}
